# garkbit

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  Procfile  README.rst  app.json  development.ini  gunicorn-config.py  package-lock.json  package.json  popfun.py  production.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py  webpack.config.coffee
.github/: ISSUE_TEMPLATE.md
alembic/: env.py  script.py.mako
assets/documents/: intro-admin.md  intro.md
client/: adminrouter.coffee  has-jsonview.coffee  indexrouter.coffee  inspector.coffee  jsonapi.coffee  paginate-bar.coffee  static-documents.coffee
client/applets/: moviedb
client/common/: adminrouter.coffee
client/crud/: controller.coffee  templates.coffee  views.coffee
client/entries/: admin-config.coffee  admin-menu-entries.coffee  admin.coffee  adminrouter.coffee  base-config.coffee  base.coffee  demo-menu-entries.coffee  dev-menu-entries.coffee  footerview.coffee  index-config.coffee  index-event-router.coffee  index.coffee  loginview.coffee  misc-menu-entries.coffee  navbar-brand-template.coffee  site-nav.coffee  themes.coffee  user-menu-view.coffee
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
garkbit/: __init__.py  routes.py  tests.py  util.py
sass/: DarkSeaGreen.scss  _DarkSeaGreen.scss  _cornsilk-purple.scss  _dev-common.scss  _dev-dark.scss  _devdark-theme.scss  cornsilk-purple.scss  dev-dark.scss  plain.scss
tests/: __init__.py  test_garkbit.py
(+326 files in other folders)
